force-app/main/default/objects/ImagenProducto__c/ImagenProducto__c.object-meta.xml
<CustomObject>
    <label>Imagen Producto</label>
    <nameField>
        <label>Nombre de ImagenProducto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Imagenes Productos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>