force-app/main/default/objects/ImagenProducto__c/fields/IdExt__c.field-meta.xml
<CustomField>
    <fullName>IdExt__c</fullName>
    <externalId>true</externalId>
    <label>IdExt Imagen producto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>