force-app/main/default/objects/ImagenProducto__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductCode</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Imagenes Productos</relationshipLabel>
    <relationshipName>Imagenes_Productos</relationshipName>
    <type>Lookup</type>
</CustomField>