force-app/main/default/objects/ImagenProducto__c/fields/urlimagen__c.field-meta.xml
<CustomField>
    <fullName>urlimagen__c</fullName>
    <label>Url imagen</label>
    <type>Url</type>
</CustomField>